tests/query_runtime_errors/binary_operators_xor_right/error.txt
Error: 
    1 | select event.a xor event.b from in into out;
      |                    ^^^^^^^ The binary operation `xor` is not defined for the type `bool` and `string`
